# rust-otel-demo

./: Cargo.toml  README.md  docker-compose.yaml
src/: main.rs
