[package]
name = "rust-otel-demo"
version = "0.1.0"
edition = "2021"
default-run = "rust-otel-demo"


[dependencies]
axum = "0.7.7"
log = { version = "0.4.22", features = ["serde"] }
opentelemetry = { version = "0.26.0", features = ["logs", "metrics"] }
opentelemetry-appender-log = { version = "0.26.0", features = ["serde"] }
opentelemetry-appender-tracing = "0.26.0"
opentelemetry-otlp = { version = "0.26.0", features = ["metrics", "tonic", "logs"] }
opentelemetry-semantic-conventions = "0.26.0"
opentelemetry-stdout = "0.26.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio", "logs"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["std"] }
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry", "std"] }


[[bin]]
name = "rust-otel-demo"
path = "src/main.rs"